feat: add durable Socket.IO collaboration
